[project]
name = "nomad-distribution"
description = "nomad distribution template"
version = "0.1"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "nomad-lab[parsing, infrastructure]>=1.3.10",
  #'perovskite-solar-cell-database",
  #'nomad-porous-materials; sys_platform != "win32"',
  #"nomad-aitoolkit",
  #"nomad-simulations==0.0.1",
  "pynxtools",
  "pynxtools-mpes>=0.2",
  #"nomad-schema-plugin-run>=1.0.1",
  #"nomad-schema-plugin-simulation-workflow>=1.0.1",
  #"nomad-normalizer-plugin-bandstructure>=1.0",
  #"nomad-normalizer-plugin-dos>=1.0",
  #"nomad-normalizer-plugin-soap>=1.0",
  #"nomad-normalizer-plugin-spectra>=1.0",
  #"nomad-normalizer-plugin-system>=1.0",
  #"nomad-normalizer-plugin-simulation-workflow>=1.0",
  #"eelsdbconverter",
  #"nomad-parser-plugins-electronic>=1.0",
  #"nomad-parser-plugins-atomistic>=1.0",
  #"nomad-parser-plugins-workflow>=1.0",
  #"nomad-parser-plugins-database>=1.0",
  "fhi-sed-config",
  "oasis_optimal_footer_pages",
  #"nomad-utility-workflows",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
nomad-lab = { workspace = true }
pynxtools-mpes = { workspace = true }
pynxtools = { workspace = true }
fhi-sed-config = { workspace = true }
oasis_optimal_footer_pages = { workspace = true }

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
dev-dependencies = [
  "nomad-lab[parsing, infrastructure, dev]>=1.3.4",
  "poethepoet>=0.29.0",
]

[tool.poe.tasks]
submodule = "git submodule update --init --recursive"
docker = "docker compose up -d"
start = "nomad admin run appworker --dev"
setup = ["submodule", "gui-env", "gui-setup", "docker"]
lint = ["ruff-lint", "ruff-format"]

[tool.poe.tasks.gui-env]
cmd = "python -W ignore -m nomad.cli dev gui-env"
capture_stdout = "packages/nomad-FAIR/gui/.env.development"

[tool.poe.tasks.docs]
cmd = "mkdocs serve"
cwd = "packages/nomad-FAIR"

[tool.poe.tasks.ruff-lint]
cmd = "ruff check ."

[tool.poe.tasks.ruff-format]
cmd = "ruff format . --check"

[tool.poe.tasks.hub]
cmd = "nomad admin run hub"
cwd = "packages/nomad-FAIR"

[tool.poe.tasks.gui]
cmd = "yarn run"
cwd = "packages/nomad-FAIR/gui"

[tool.poe.tasks.gui-setup]
cmd = "yarn"
cwd = "packages/nomad-FAIR/gui"

[tool.poe.tasks.gen-gui-test-env]
cmd = "python -W ignore -m nomad.cli dev gui-config"
capture_stdout = "packages/nomad-FAIR/gui/tests/env.js"
env = { NOMAD_CONFIG = "packages/nomad-FAIR/gui/tests/nomad.yaml" }

[tool.poe.tasks.gen-gui-test-artifacts]
cmd = "python -W ignore -m nomad.cli dev gui-artifacts"
capture_stdout = "packages/nomad-FAIR/gui/tests/artifacts.js"
env = { NOMAD_CONFIG = "packages/nomad-FAIR/gui/tests/nomad.yaml" }
deps = ["gen-gui-test-env"]

[tool.poe.tasks.gen-nomad-lock]
cmd = "uv pip compile -U --universal -p 3.11 --extra parsing --extra infrastructure --extra dev --annotation-style=line pyproject.toml requirements.txt"
capture_stdout = "packages/nomad-FAIR/requirements-dev.txt"
cwd = "packages/nomad-FAIR"
deps = ["gen-nomad-lock-without-dev"]

[tool.poe.tasks.gen-nomad-lock-without-dev]
cmd = "uv pip compile -U --universal -p 3.11 --extra parsing --extra infrastructure --annotation-style=line pyproject.toml"
cwd = "packages/nomad-FAIR"
capture_stdout = "packages/nomad-FAIR/requirements.txt"
